--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'androidx.navigation.safeargs'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -40,6 +41,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.5.3'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.room:room-runtime:2.5.1'
+    implementation 'com.google.firebase:firebase-auth:22.0.0'
     annotationProcessor 'androidx.room:room-compiler:2.5.1'
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation 'com.squareup.picasso:picasso:2.8'
